objects/Bling_Bling__c.object
<CustomObject>
    <description>Demo object used for demo purposes.
Update this every time I have a new demo.</description>
    <fields>
        <fullName>External_URL__c</fullName>
        <label>External URL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>https://{!Environment.EXT_URL}</fullName>
                </value>
                <value>
                    <fullName>https://static.externalurl.com</fullName>
                </value>
                <value>
                    <fullName>https://www.externalurl.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Bling Bling</label>
    <nameField>
        <label>Bling Bling Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bling Blings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>